# treeboost

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  pyproject.toml
benches/: competitors.rs  correctness.rs  prediction_profile.rs  profile.rs
benchmarks/: benchmark.py  requirements.txt  test_timing.py  visualize.py
docs/: API.md  PRESET_GUIDE.md
examples/: 4bit_benchmark.rs  automl_profile.rs  autotuner.rs  backend_benchmark.rs  basic_regression.rs  cache_pollution_study.rs  classification.rs  conformal_prediction.rs  detailed_breakdown.rs  era_histogram_benchmark.rs  era_split_comparison.rs  find_crossover.rs  full_gpu_benchmark.rs  fused_benchmark.rs  histogram_benchmark.rs  histogram_scaling.rs  large_dataset_profiler.rs  linear_tree.rs  multilabel.rs  public_data_download.rs  register_cache_benchmark.rs  scalar_poc.rs  simd_benchmark.rs  soa_histogram_poc.rs  subgroup_benchmark.rs  target_encoding.rs  tensor_tile_poc.rs  training_breakdown.rs  training_loop_deep_dive.rs  universal_model.rs  workgroup_size_benchmark.rs
examples/common/: mod.rs
python/tests/: __init__.py  test_basic.py
python/treeboost/: __init__.py
samples/synthetic/: README.md  basic_regression.csv  dirty_data.csv  edge_cases.csv  high_cardinality.csv  mixed_types.csv
scripts/: generate_samples.py
src/: lib.rs  main.rs  prelude.rs  utils.rs
src/analysis/: analyzer.rs  mod.rs  probes.rs  profiler.rs  report.rs  stats.rs  thresholds.rs
src/backend/: config.rs  hybrid.rs  mod.rs  traits.rs
src/backend/cuda/: device.rs  full_gpu.rs  kernels.rs  mod.rs  partition.rs
src/backend/scalar/: histogram.rs  mod.rs
src/backend/wgpu/: mod.rs  (+4 more)
src/booster/: analysis.rs  config.rs  conformal.rs  gbdt.rs  mod.rs  prediction.rs  shap.rs  training.rs
src/dataset/: binned.rs  binner.rs  bundler.rs  feature_extractor.rs  loader.rs  mod.rs  packed.rs  pipeline.rs  reorder.rs  split.rs
src/defaults/: analysis.rs  auto.rs  backend.rs  bundler.rs  ensemble.rs  feature_generation.rs  feature_selection.rs  features.rs  gbdt.rs  linear.rs  linear_feature.rs  linear_tree.rs  ltt.rs  mod.rs  preprocessing.rs  seeds.rs  split.rs  tree.rs  tuner.rs  universal.rs
src/encoding/: cms.rs  mod.rs  target.rs
src/ensemble/: ltt.rs  mod.rs  model.rs  multi_seed.rs  selection.rs  stacking.rs  traits.rs
src/features/: crosssectional.rs  dataframe.rs  interaction.rs  mod.rs  polynomial.rs  ratio.rs  selector.rs  smart.rs  stats.rs  timeseries.rs  timeseries_grouped.rs
src/histogram/: builder.rs  entry.rs  era.rs  fused.rs  mod.rs  vector.rs
src/inference/: conformal.rs  mod.rs  predict.rs
src/kernel/: fallback.rs  mod.rs
src/learner/: incremental.rs  linear.rs  linear_tree.rs  mod.rs  traits.rs  tree.rs
src/loss/: activation.rs  beta.rs  focal.rs  huber.rs  logloss.rs  mape.rs  mod.rs  mse.rs  multilabel.rs  quantile.rs  softmax.rs  traits.rs  tweedie.rs
src/model/: auto.rs  builder.rs  config.rs  mod.rs  pipeline.rs  predictor.rs  progress.rs  tuning.rs  universal.rs
src/monitoring/: detector.rs  incremental.rs  metrics.rs  mod.rs  tracker.rs
src/preprocessing/: dataframe.rs  encoding.rs  imputer.rs  incremental.rs  mod.rs  outliers.rs  pipeline.rs  polars_ext.rs  registry.rs  scaler.rs  smart.rs  target_transform.rs  timeseries.rs  timeseries_grouped.rs  traits.rs  transforms.rs
src/python/: bindings.rs  mod.rs
src/serialize/: bincode_io.rs  mod.rs  rkyv_io.rs  trb.rs
src/tree/: ensemble.rs  grow.rs  mod.rs  node.rs  split.rs  tree.rs  vector_grow.rs  vector_split.rs  vector_tree.rs
src/tuner/: autotuner.rs  config.rs  history.rs  logger.rs  ltt.rs  metrics.rs  mod.rs  realistic.rs  traits.rs  trial.rs
src/utils/: features.rs  mod.rs  preprocessing.rs
tests/: automl_integration.rs  automl_ltt.rs  automl_multilabel.rs  booster.rs  config.rs  conformal_prediction.rs  dataset.rs  encoding.rs  era_rankic.rs  features.rs  gbdt_presets.rs  gpu.rs  gpu_threshold.rs  histogram.rs  integration.rs  loss.rs  ltt_extrapolation.rs  monitoring.rs  multiclass_multilabel.rs  optimization.rs  panel_data_detection.rs  parquet.rs  pipeline.rs  preprocessing.rs  progress_callback.rs  rf_robustness.rs  robust_loss.rs  serialization.rs  split.rs  tree.rs  tuner.rs  universal_multilabel.rs
tests/common/: mod.rs
tests/config/: backend_preset_tests.rs  gbdt_preset_tests.rs  legacy_compat_tests.rs  linear_preset_tests.rs  ltt_preset_tests.rs  mod.rs  tree_preset_tests.rs  tuner_preset_tests.rs  universal_preset_tests.rs
(+74 files in other folders)
